# pfm_bench

./: .gitignore  README.md  download_data.py  pyproject.toml  pytest.ini  requirements.txt
src/: download_data.py
src/ensemble_methods/: ensembling.py  ensembling_config.yml  stacking.py  utils.py
src/metrics/: Dice.py
src/models/DRM/paper_pattern/: config.py  field_computation.py  generate_figs.py
src/models/DRM/source/: compute_energy.py
src/models/FNO/: evaluate.py  fno.py  train.py  utils.py
src/models/UNet/: evaluate.py  train.py  unet.py  utils.py
src/models/unet/: train.py  utils.py
tests/: test_download_data.py  test_load_fno_dataset.py  test_load_unet_dataset.py
